# lm

./: .gitignore  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  DEVELOP.md  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  requirements-dev.txt  requirements_dev.txt  setup.cfg  setup.py  tokenize.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pytest.yml
data/uds/: doc1.txt  doc2.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  principles.md  usage.rst
etc/experiments/training/: add-one_cpu.jsonnet
etc/lm/tasks/: addition.jsonnet  sum_one.jsonnet
scripts/: run_dev.sh  train_addition.sh  train_sum_one.sh  train_uds.sh
src/lm/: __init__.py  config.py  encoders.py  examples.py  optimizers.py  registry.py  tf.py
src/lm/builders/: attention.py  base.py  blocks.py  embeddings.py  initializers.py  nn.py
src/lm/cli/: cleantxt.py  config.py  configure.py  create_rawtxt_corpus.py  encode.py  eval.py  filter_lang.py  interactive.py  main.py  preprocess.py  synth.py  train.py
src/lm/datasets/: __init__.py  constants.py  examples.py  seq2seq.py
src/lm/devices/: __init__.py  tpu.py
src/lm/infeeds/: __init__.py  base.py  generator.py  next_token.py  readers.py  seq2seq.py
src/lm/jsonnet/: datasets.libsonnet  infeeds.libsonnet  models.libsonnet
src/lm/models/: basic.py  transformer.py
src/lm/outfeeds/: tfrecord.py
src/lm/scripts/: check_dataset.py  convert_tokenizer.py  train_tokenizer.py
src/lm/tasks/: __init__.py  base.py  math.py
tests/: __init__.py  test_lm.py
tests/lm/: test_tf.py
(+2 files in other folders)
