[isort]
default_section = FIRSTPARTY
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = lm
known_third_party =
    absl
    numpy
    packaging
    pytest
    rouge_score
    sacrebleu
    seqeval
    tensorflow
    mesh_tensorflow
    timeout_decorator
    tqdm
    pydantic

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:lm/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore =
    E121,E123,E126,E226,E24,E704,W503,W504,  # these are ignored by default
    E501,  # line too long
per-file-ignores =
    tests/*.py: F401

[options]
setup_requires =
    wheel
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    src/lm 
